Fix tile alignment and spacing issues

--- a/AnimeCharacters/wwwroot/css/animes.css
+++ b/AnimeCharacters/wwwroot/css/animes.css
@@ -90,3 +90,7 @@
     padding-right: 8px;
     padding-left: 8px;
 }
+.col-auto {
+    padding-right: 8px;
+    padding-left: 8px;
+}
